--- a/build.gradle
+++ b/build.gradle
@@ -2,3 +2,11 @@ apply plugin: 'java'
 
 version = 0.0
 sourceCompatibility = 1.8
+
+dependencies {
+	testCompile 'junit:junit:4.12'
+}
+
+repositories {
+	mavenCentral()
+}
