Add code quality management tools

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'java'
 
+ext.configDir = new File(rootDir, 'config')
+
+apply from: "$rootDir/gradle/jacoco.gradle"
+apply from: "$rootDir/gradle/checkstyle.gradle"
+apply from: "$rootDir/gradle/findbugs.gradle"
+apply from: "$rootDir/gradle/pmd.gradle"
+
+
+
 version = 0.0
 sourceCompatibility = 1.8
 
@@ -10,3 +19,5 @@ dependencies {
 repositories {
 	mavenCentral()
 }
+
+
