Change file path in .gradle

--- a/gradle/checkstyle.gradle
+++ b/gradle/checkstyle.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'checkstyle'
 
-ext.checkstyleConfigDir = "$configDir/checkstyle"
+ext.checkstyleConfigDir = "${configDir}/checkstyle"
 
 checkstyle {
 	toolVersion = "7.1"
