--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'java'
 
 ext.configDir = new File(rootDir, 'config')
 
-apply from: "$rootDir/gradle/jacoco.gradle"
-apply from: "$rootDir/gradle/checkstyle.gradle"
-apply from: "$rootDir/gradle/findbugs.gradle"
-apply from: "$rootDir/gradle/pmd.gradle"
+apply from: "${rootDir}/gradle/jacoco.gradle"
+apply from: "${rootDir}/gradle/checkstyle.gradle"
+apply from: "${rootDir}/gradle/findbugs.gradle"
+apply from: "${rootDir}/gradle/pmd.gradle"
 
 
 
