--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ sourceCompatibility = 1.8
 
 dependencies {
 	testCompile 'junit:junit:4.12'
+    compile 'org.springframework:spring-context:4.3.3.RELEASE'
 }
 
 repositories {
