--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	testCompile 'junit:junit:4.12'
 	compile 'org.apache.commons:commons-configuration2:2.1'
 	compile 'commons-validator:commons-validator:1.5.1'
+	compile 'org.hibernate:hibernate-core:5.2.2.Final'
 }
 
 repositories {
